<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.administrator.bigelephantbike.ChargeActivity"
    android:weightSum="1">

    <com.example.administrator.bigelephantbike.backTitleLogoLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </com.example.administrator.bigelephantbike.backTitleLogoLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/my_upload"
        android:stretchColumns="0">
    <TableRow>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/charging"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/white"
            android:layout_span="2" />
    </TableRow>
    <TableRow>
        <TextView
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_sum"
        android:textSize="20dp"
        android:textColor="@color/white"
        />
        <TextView
            android:paddingRight="10dp"
            android:id="@+id/sum_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/white"
            android:text="@string/default_money"
            />
    </TableRow>
        <TableRow>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_time"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <TextView
                android:paddingRight="10dp"
                android:id="@+id/use_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/defailt_time"
                />
        </TableRow>
    </TableLayout>
    <TextView
        android:padding="10dp"
        android:id="@+id/bike_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/qet_hint_color"
        android:text="@string/bike_id"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlock_key"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/wheelViewLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/tips"/>
    <TextView
        android:id="@+id/meet_qustion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:textColor="@color/title_bottom_line"
        android:text="@string/question"/>
    <TableLayout
        android:layout_marginBottom="0dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="#ffabadaf"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/little_tips"/>
        <TableRow
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <Button
                android:id="@+id/return_btn"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/corner_sharp_green"
                android:text="@string/return_bike"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
            <Button
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:id="@+id/recover_btn"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/recover_bike"
                android:textColor="@color/black"
                android:background="@drawable/corner_sharp_green"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
