<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gray"
    android:id="@+id/meet_qustion_layout"
    tools:context="com.example.administrator.bigelephantbike.MeetQuestion"
    android:weightSum="1">
    <ViewFlipper
        android:id="@+id/account_view_flippe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/my_title"
            layout="@layout/my_title"/>
    </ViewFlipper>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_type"
        android:textColor="@color/black"
        android:textSize="20dp"/>
    <ListView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:id="@+id/question_list"
        android:layout_height="wrap_content">
    </ListView>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_des"
        android:text="@string/question_des"
        android:textSize="20dp"/>
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/input_des"
        />
    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="20dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/textview_dash">
        <ImageView
            android:id="@+id/canmer_pic"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/camera"/>
        <GridView
            android:gravity="center"
            android:id="@+id/pic"
            android:layout_width="154dp"
            android:layout_height="50dp"
            android:numColumns="3"
            android:horizontalSpacing="0dp"
            android:verticalSpacing="0dp">
        </GridView>
        <TextView
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:id="@+id/voucher"
            android:hint="@string/upload_tips"
            android:layout_width="wrap_content"
            android:gravity="center_vertical|right"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"/>
    <Button
        android:layout_marginTop="70dp"
        android:id="@+id/submit_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/corner_sharp_green"
        android:paddingLeft="90dp"
        android:text="@string/submit_btn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingRight="90dp"
        android:layout_gravity="center">

    </Button>
</LinearLayout>
