<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <com.example.administrator.bigelephantbike.backTitleValidateIdLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
    </com.example.administrator.bigelephantbike.backTitleValidateIdLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/id_card"
        android:text="@string/id_card_pic"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/student_card_pic"
        android:background="@drawable/id_card"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_application"
        android:background="@drawable/corner_sharp_green"
        android:layout_gravity="center"
        />
</LinearLayout>
