<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gray"
    tools:context="com.example.administrator.bigelephantbike.ChargeActivity"
    android:weightSum="1">
    <com.example.administrator.bigelephantbike.backTitleLogoLayout
        android:layout_width="wrap_content"
        android:id="@+id/my_title"
        android:layout_height="wrap_content">
    </com.example.administrator.bigelephantbike.backTitleLogoLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/my_upload"
        android:stretchColumns="0">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_end"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_span="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_sum"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <TextView
                android:paddingRight="10dp"
                android:id="@+id/sum_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/default_money"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_time"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
            <TextView
                android:paddingRight="10dp"
                android:id="@+id/use_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/defailt_time"
                />
        </TableRow>
    </TableLayout>
    <payradio.PayRadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        my:orientation="vertical"
        >
        <payradio.PayRadioPurified
            android:id="@+id/p1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_selector"
            my:radio="@drawable/radio"
            my:mlogo="@drawable/big_pay"
            my:mtitle="大象钱包"
            my:desc="免密码支付，推荐懒人使用"
            my:checked="true"
            />
        <payradio.PayRadioPurified
            android:id="@+id/p2"
            android:paddingLeft="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_selector"
            my:radio="@drawable/radio"
            my:mlogo="@drawable/wechat"
            my:mtitle="  微信支付"
            my:desc="  推荐微信支付已绑定信用卡的用户使用"
            />
        <payradio.PayRadioPurified
            android:id="@+id/p3"
            android:paddingLeft="9dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_selector"
            my:radio="@drawable/radio"
            my:mlogo="@drawable/zhifubao"
            my:mtitle="  支付宝"
            my:desc="  推荐已安装支付宝客户端的用户使用"
            />
    </payradio.PayRadioGroup>
    <Button
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="90dp"
        android:paddingRight="90dp"
        android:id="@+id/pay"
        android:textColor="@color/white"
        android:text="@string/pay"
        android:background="@drawable/corner_sharp_green"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_question"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"/>
    </LinearLayout>
    <com.example.administrator.bigelephantbike.LeftMenuLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/left_menu"/>
</android.support.v4.widget.DrawerLayout>