<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/layout"
    android:background="@color/gray"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        ></View>
    <Button
        android:layout_margin="2dp"
        android:id="@+id/take_pic"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:background="@null"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        ></View>
    <Button
        android:background="@null"
        android:layout_margin="2dp"
        android:id="@+id/choose_pic"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_from_pics"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        ></View>
    <Button
        android:background="@null"
        android:layout_margin="2dp"
        android:id="@+id/cancel_btn"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        ></View>


</LinearLayout>
